2023-09-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wmf.c (ipa_bmp_draw): Print bmp.data as the pointer it is
	rather than casting to a 'long'.

	* coders/pnm.c (PNMReadThreads): Fix compiler warning regarding
	overflow.

	* coders/sun.c (WriteSUNImage): Test for sun_info.length overflow
	in a way which should not provoke a compiler warning.

2023-09-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick/magick/magick_config.h.in: Block building the XTRN
	coder unless the user enables EnableXTRNCoder.  The XTRN coder is
	primarily used by the optional contributed ImageMagickObject COM+
	DLL object, but it might be used for a similar purpose.  The XTRN
	coder serves no purpose unless invoked from the address space of a
	program using GraphicsMagick.

2023-09-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/{constitute.c, drawtest.c, rwblob.c, rwfile.c}: Initialize
	locale settings the same as the 'gm' utility.

	* magick/{drawing_wand.c, drawtest.c, magick_wand.c, pixel_wand.c,
	wandtest.c}: Initialize locale settings the same as the 'gm'
	utility.

2023-09-09  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/xtrn.c Fixed crash on dereferenced NULL pointer.

2023-09-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c (SetImageAttribute): Remove
	SetImageAttribute() Extending attribute value text code entirely.

2023-09-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated the News.

	* magick/attribute.c (SetImageAttribute): Disable attribute
	extension deprecation warning printf.  It may be that eliminating
	support for attribute value extension will never happen due to
	subtly entrenched internal usage.

	* coders/pnm.c (ReadPNMImage): Fix reading comments from PAM
	format.

2023-09-06  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c Reverting to BI_BITFIELD. BI_ALPHABITFIELDS seems
	to be very rare.

2023-09-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
