@@ -23,7 +23,7 @@ The licenses which components of this software fall under are as follows.
   from ImageMagick Studio's ImageMagick and applied the "MIT" style
   license:
 
-  Copyright (C) 2002-2022 GraphicsMagick Group
+  Copyright (C) 2002-2023 GraphicsMagick Group
 
   Permission is hereby granted, free of charge, to any person
   obtaining a copy of this software and associated documentation files
