@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020230915"
-#define public MagickPackageReleaseDate "snapshot-20230915"
+#define public MagickPackageVersionAddendum ".020230916"
+#define public MagickPackageReleaseDate "snapshot-20230916"
