@@ -1,6 +1,6 @@
 // This may look like C code, but it is really -*- C++ -*-
 //
-// Copyright (C) 2003, 2004 GraphicsMagick Group
+// Copyright (C) 2003-2023 GraphicsMagick Group
 // Copyright (C) 2002 ImageMagick Studio
 // Copyright 1991-1999 E. I. du Pont de Nemours and Company
 //
