@@ -55,7 +55,7 @@ to changing one line of code.</em>]</p>
 <li><p>In November 2002, the GraphicsMagick Group created GraphicsMagick
 from ImageMagick Studio's ImageMagick and applied the &quot;MIT&quot; style
 license:</p>
-<p>Copyright (C) 2002-2022 GraphicsMagick Group</p>
+<p>Copyright (C) 2002-2023 GraphicsMagick Group</p>
 <p>Permission is hereby granted, free of charge, to any person
 obtaining a copy of this software and associated documentation files
 (the &quot;Software&quot;), to deal in the Software without restriction,
