@@ -1,3 +1,10 @@
+2023-09-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* VisualMagick/magick/magick_config.h.in: Update the copyright
+	year range.
+
+	* Copyright.txt: Update the copyright year.
+
 2023-09-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/wmf.c (ipa_bmp_draw): Print bmp.data as the pointer it is
